# cp2077_advert_extractor

./: .gitignore  .ignore  LICENSE  README.md  config.toml.example  pyproject.toml
.claude/: settings.local.json
.claude/agents/: asset-lookup.md  build-validator.md  command-help.md  log-analyzer.md  mark-skipped-helper.md  pipeline-status.md  run-stage.md  wolvenkit-help.md
scripts/: mark_skipped.py
src/cp2077_adtex/: __init__.py  __main__.py  cli.py  config.py  discovery.py  extractor.py  finalizer.py  io_utils.py  list_validator.py  logging_utils.py  manifest.py  models.py  packager.py  progress.py  reporting.py  validation.py  wolvenkit.py
tests/: test_config.py  test_discovery.py  test_list_validator.py  test_manifest.py  test_pipeline_flow.py  test_validation.py  test_wolvenkit_commands.py
